@@ -1418,6 +1418,217 @@ argument_list|(
 name|gotExp
 argument_list|)
 expr_stmt|;
+comment|// No numShards should fail
+name|params
+operator|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+literal|"action"
+argument_list|,
+name|CollectionAction
+operator|.
+name|CREATE
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|collectionName
+operator|=
+literal|"acollection"
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+literal|"name"
+argument_list|,
+name|collectionName
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+name|OverseerCollectionProcessor
+operator|.
+name|REPLICATION_FACTOR
+argument_list|,
+literal|10
+argument_list|)
+expr_stmt|;
+name|request
+operator|=
+operator|new
+name|QueryRequest
+argument_list|(
+name|params
+argument_list|)
+expr_stmt|;
+name|request
+operator|.
+name|setPath
+argument_list|(
+literal|"/admin/collections"
+argument_list|)
+expr_stmt|;
+name|gotExp
+operator|=
+literal|false
+expr_stmt|;
+name|resp
+operator|=
+literal|null
+expr_stmt|;
+try|try
+block|{
+name|resp
+operator|=
+name|createNewSolrServer
+argument_list|(
+literal|""
+argument_list|,
+name|baseUrl
+argument_list|)
+operator|.
+name|request
+argument_list|(
+name|request
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|SolrException
+name|e
+parameter_list|)
+block|{
+name|gotExp
+operator|=
+literal|true
+expr_stmt|;
+block|}
+name|assertTrue
+argument_list|(
+name|gotExp
+argument_list|)
+expr_stmt|;
+comment|// 0 numShards should fail
+name|params
+operator|=
+operator|new
+name|ModifiableSolrParams
+argument_list|()
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+literal|"action"
+argument_list|,
+name|CollectionAction
+operator|.
+name|CREATE
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|collectionName
+operator|=
+literal|"acollection"
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+literal|"name"
+argument_list|,
+name|collectionName
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+name|OverseerCollectionProcessor
+operator|.
+name|REPLICATION_FACTOR
+argument_list|,
+literal|10
+argument_list|)
+expr_stmt|;
+name|params
+operator|.
+name|set
+argument_list|(
+literal|"numShards"
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+name|request
+operator|=
+operator|new
+name|QueryRequest
+argument_list|(
+name|params
+argument_list|)
+expr_stmt|;
+name|request
+operator|.
+name|setPath
+argument_list|(
+literal|"/admin/collections"
+argument_list|)
+expr_stmt|;
+name|gotExp
+operator|=
+literal|false
+expr_stmt|;
+name|resp
+operator|=
+literal|null
+expr_stmt|;
+try|try
+block|{
+name|resp
+operator|=
+name|createNewSolrServer
+argument_list|(
+literal|""
+argument_list|,
+name|baseUrl
+argument_list|)
+operator|.
+name|request
+argument_list|(
+name|request
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|SolrException
+name|e
+parameter_list|)
+block|{
+name|gotExp
+operator|=
+literal|true
+expr_stmt|;
+block|}
+name|assertTrue
+argument_list|(
+name|gotExp
+argument_list|)
+expr_stmt|;
 comment|// Fail on one node
 comment|// first we make a core with the core name the collections api
 comment|// will try and use - this will cause our mock fail
